# stash-basecamp

./: .gitignore  CMakeLists.txt  README.md  flake.nix  halt.md  metadata.json
blog/: 2026-04-22-stash-0.1.0.md
docs/: retro-log.md  stash-button-integration.md  stash-pinning-lessons.md  why-logos-storage-always-fails.md
docs/plans/: logos-storage-transport.md
docs/skills/: builder-core-module-src-layout.md  builder-external-libs-open.md  builder-lgx-install-recipe.md  builder-ui-qml-adoption.md
integration/: StashButton.qml
modules/stash/: manifest.json  metadata.json  plugin_metadata.json
plugins/stash_ui/: Main.qml  flake.nix  logos-stash_ui-module-lgx-0.1.0  manifest.json  metadata.json  result
plugins/stash_ui/qml/: Main.qml  StashButton.qml  stash-button-integration.md
scripts/: fetch-kubo.sh
src/core/: LibStorageTransport.cpp  LibStorageTransport.h  LogosStorageTransport.cpp  PinningClient.cpp  PinningClient.h  StashBackend.cpp  StashBackend.h  StorageClient.cpp  StorageClient.h
src/plugin/: StashPlugin.cpp  StashPlugin.h  plugin_metadata.json
tests/: logos_api_stub.cpp  nim_runtime_stub.cpp  test_stash_backend.cpp  test_stash_plugin.cpp
